--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-Tuazon, John Byron
-DIT - 1234567
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IT0043_ TX01</title>
+</head>
+<body>
+    <h1>Tuazon, John Byron</h1>
+    <h2>DIT - 1234567</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, vel? Iusto quas praesentium quidem aut sapiente! Voluptate minus accusantium quas nostrum assumenda recusandae praesentium nesciunt?</p>
+    
+</body>
+</html>
