--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT0043_ TX01</title>
-</head>
-<body>
-    <h1>Tuazon, John Byron</h1>
-    <h2>DIT - 1234567</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, vel? Iusto quas praesentium quidem aut sapiente! Voluptate minus accusantium quas nostrum assumenda recusandae praesentium nesciunt?</p>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body background="img/5540119.jpg" marginwidth="100px">
+    <center>
+      <font face = "Calibri">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/6/62/FEU_Tech_official_seal.png"
+          alt="FEU Tech Logo"
+          height="90px"
+        />
+
+        <font color="green" size="5"><h1>ADVISORY</h1></font>
+        <h2>ONLINE SYNCHRONOUS CLASSES ON APRIL 29 AND 30, 2024</h2>
+        <p>
+          Due to the scheduled nationwide trasport strike, FEU Tech will conduct
+          synchronous online classes on <font color="green"><b>April 29 and 30, 2024.</b></font> Students are
+          advised to check their Canvas account for assignments or consult with
+          faculty for other instructions.
+        </p>
+        <p>
+          All offices will be open onsite to assist you with enrollment and
+          other transactions and will follow regular working operations
+          schedule.
+        </p>
+        <p><font color="green"><b>Keep safe, Tamaraws.</b></font></p>
+        <p align = "right"><font size="2"><i>Technology driven by education.</i></font></p>
+      </font>
+    </center>
+  </body>
 </html>
