--- a/about.html
+++ b/about.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    This is an about page.
-</body>
+  </head>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+      laboriosam placeat accusantium quibusdam facilis asperiores velit beatae
+      maiores nesciunt repellat quasi fugit assumenda perspiciatis neque nulla
+      nobis accusamus vitae quae!
+    </p>
+  </body>
 </html>
