--- a/about.html
+++ b/about.html
@@ -12,5 +12,12 @@
       maiores nesciunt repellat quasi fugit assumenda perspiciatis neque nulla
       nobis accusamus vitae quae!
     </p>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa qui maxime
+      aspernatur? Omnis beatae animi harum itaque quos officiis reprehenderit
+      voluptas placeat, praesentium deleniti quia soluta tenetur quidem
+      aspernatur amet.
+    </p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti autem voluptates similique odit expedita impedit fuga quaerat repellendus incidunt temporibus beatae sit, totam facilis! Doloremque quam voluptas veniam aperiam laudantium?</p>
   </body>
 </html>
