--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           other transactions and will follow regular working operations
           schedule.
         </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt est vel mollitia. Perferendis nemo magnam omnis repellendus a vero ab!
+        </p>
         <p><font color="green"><b>Keep safe, Tamaraws.</b></font></p>
         <p align = "right"><font size="2"><i>Technology driven by education.</i></font></p>
       </font>
